k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solidarytech
  labels:
    project: solidarytech
    environment: production
    managed-by: argocd
